--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>自介</h2>
     <p>您好，我叫羅賓。</p>
     <p>目前正在申請國外博士，有點空閒時間，正在賺外快籌學費。</p>
-    <p>所以現在提供對於AI類神經網路的作業輔導。</p>
+    <p>現在提供對於AI類神經網路的作業輔導。</p>
     <p>我自己有好幾年的類神經設計經驗，不要太特殊的模型都訓練得起來。</p>
 </section>
 
