--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 <section>
     <h2>自介</h2>
     <p>您好，我叫羅賓。</p>
-    <p>目前正在申請國外博士，有點空閒時間，正在賺外快籌學費。</p>
-    <p>現在提供對於AI類神經網路的作業輔導。</p>
-    <p>我自己有好幾年的類神經設計經驗，不要太特殊的模型都訓練得起來。</p>
+    <p>目前正申請國外博士，有點空閒，正在賺外快籌學費。</p>
+    <p>目前有提供對於AI類神經網路的作業輔導。</p>
 </section>
 
 <!-- 服務 -->
 <section>
     <h2>服務</h2>
-    <p>如果您有對作業需要協助，可以把作業交給我，除了完成外，會提供30分鐘跟您講解整個網路的設計。</p>
+    <p>如果您有完成不了的困擾，可以把作業交給我。</p>
 </section>
 
 <!-- 優點 -->
@@ -27,32 +26,34 @@
     <h2>優點</h2>
     <ol>
         <li>省下找資料的時間</li>
-        <li>省下找最佳參數的時間</li>
-        <li>省下設備不足的困擾</li>
+        <li>省下找條參的時間</li>
+        <li>省下設備不夠的困擾</li>
     </ol>
-    <p>一般沒經驗的新手可能要花整整一個禮拜以上的時間，挫折又困擾。但我這邊有經驗，3天左右的調參跟訓練就好。</p>
-    <p>如果ChatGPT已可以幫你搞定，我也非常推薦。</p>
+    <p>沒經驗的新手可能要花整整一個禮拜以上的時間，挫折又困擾。</p>
+    <p>但我這邊可以，3天左右就可以訓練好一個一般的模型。</p>
+    <p>如果ChatGPT可以幫你搞定，我也非常推薦。</p>
 </section>
 
 <!-- 費用 -->
 <section>
     <h2>費用</h2>
     <ol>
-        <li>全包作業：待估價，底價 3000，把通過的標準與作業提供給我，需要點時間評估估價</li>
-        <li>諮詢
+        <li>諮詢：免費，可以透過文字或者語音，了解您的作業需求與期望</li>
+        <li>輔導：
             <ol>
                 <li>A方案：100 (1次)</li>
                 <li>B方案：1000 (15分鐘)</li>
             </ol>
         </li>
+        <li>作業完成：case by case，需要估價，底價 3000。</li>
     </ol>
-    <p>我回答不出來的不用算，對答案不滿意不用給。</p>
+    <p>回答不出來的不算費用，對答案不滿意不用給。</p>
 </section>
 
 <!-- 時間 -->
 <section>
-    <h2>時間</h2>
-    <p>因為最近也正幫幾個碩博提供服務，所以時間不確定，最快1~3天跟您確認是否確認訂單。</p>
+    <h2>回覆時間</h2>
+    <p>最近正幫幾個碩博提供服務，所以時間不確定，最快1~3天與您回覆。</p>
 </section>
 
 <!-- 聯繫方式 -->
@@ -65,8 +66,8 @@
 <section>
     <h2>收費方式</h2>
     <p>銀行匯款</p>
-    <p>作業預先付 1/3訂金</p>
-    <p>諮詢 後結</p>
+    <p>作業預先付：1/3訂金，2/3驗收達標後給付</p>
+    <p>諮詢：後結</p>
 </section>
 
 </body>
