--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section>
     <h2>自介</h2>
     <p>您好，我叫羅賓。</p>
-    <p>目前正申請國外博士，有點空閒，正在賺外快籌學費。</p>
+    <p>目前正申請國外資工博士，有點空閒，正在賺外快籌學費。</p>
     <p>目前有提供對於AI類神經網路的作業輔導。</p>
 </section>
 
