--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <section>
     <h2>聯繫方式</h2>
     <p>臉書：<a href="https://www.facebook.com/profile.php?id=100014658640856">https://www.facebook.com/profile.php?id=100014658640856</a></p>
+    <p>信箱：hung10701xing@gmail.com</p>
 </section>
 
 <!-- 收費方式 -->
