--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
         <i class="fa fa-remove"></i>
       </a>
-      <h4 class="w3-bar-item"><b>Menu</b></h4>
+      <!-- <h4 class="w3-bar-item"><b>Menu</b></h4> -->
       <a class="w3-bar-item w3-button w3-hover-black" href="#1">自介</a>
       <a class="w3-bar-item w3-button w3-hover-black" href="#2">服務</a>
       <a class="w3-bar-item w3-button w3-hover-black" href="#3">費用&工作時間</a>
