--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="1">自介</h1>
           <p>您好，我叫羅賓。</p>
-          <p>目前正申請國外資工博士，有點空閒，正在賺外快籌學費。</p>
-          <p>目前有提供對於AI類神經網路的作業輔導。</p>
+          <p>目前正申請國外資工博士，有五年多的類神經網路設計經驗，包跨視覺與強化學習。</p>
         
         </div>
       </div>
@@ -68,16 +67,15 @@
       <div class="w3-row">
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="2">服務</h1>
-          <p>如果您有完成不了的困擾，可以把作業交給我。</p>
+          <p>如果您的作業完成不了或遇到阻礙，可以放心把作業交給我。</p>
         <h3 class="w3-text-teal">優點</h3>
           <ol>
-            <li>省下找資料的時間</li>
-            <li>省下找條參的時間</li>
-            <li>省下設備不夠的困擾</li>
+            <li>省下找資料時間</li>
+            <li>省下條參的時間</li>
+            <li>省下設備不足的困擾</li>
         </ol>
-        <p>沒經驗的新手可能要花整整一個禮拜以上的時間，挫折又困擾。</p>
-        <p>但我這邊可以，3天左右就可以訓練好一個一般的模型。</p>
-        <p>如果ChatGPT可以幫你搞定，我也非常推薦。</p>
+        <p>沒經驗的新手可能要花一個禮拜以上的時間。</p>
+        <p>根據模型，我這邊可以，3天左右工作日訓練好模型，只要不是太複雜的架構。</p>
 
         </div>
       </div>
@@ -88,19 +86,19 @@
 
           <h4>1. 費用</h4>
           <ol>
-              <li>諮詢：免費，可以透過文字或者語音，了解您的作業需求與期望</li>
+              <li>諮詢：15分鐘免費</li>
               <li>輔導：
                   <ol>
-                      <li>A方案：100 (1次)</li>
-                      <li>B方案：1000 (15分鐘)</li>
+                      <li>A方案：100元 (1次)</li>
+                      <li>B方案：1000元 (15分鐘)</li>
                   </ol>
               </li>
-              <li>作業完成：case by case，需要估價，底價 3000。</li>
+              <li>作業完成：case by case，需要估價，底價 3000元。</li>
           </ol>
-          <p>回答不出來的不算費用，對答案不滿意不用給。</p>
+          <p>無法回答或對答案不滿意不用給付。</p>
 
           <h4>2. 回覆時間</h4>
-          <p>最近正幫幾個碩博提供服務，所以時間不確定，最快1~3天與您回覆。</p>
+          <p>正幫幾個碩博提供服務，時間不固定，最快1~3天與您回覆。</p>
 
             <h4>3. 收費方式</h4>
             <p>匯款方式：銀行</p>
