--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </ol>
           <p>無法回答不用給付。</p>
 
-            <h4>ㄉ. 收費方式</h4>
+            <h4>2. 收費方式</h4>
             <p>匯款方式：銀行</p>
             <p>作業服務：1/3訂金，2/3驗收達標後給付</p>
             <p>諮詢服務：後結</p>
