--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="2">外包服務</h1>
-          <p>服務：神經模型訓練、架構設計，任何視覺、語音與強化學習模型</p>
+          <p>服務：神經模型訓練、架構設計，種類包括任何視覺、語音與強化學習模型</p>
           <p>價格：底價三千</p>
           <p>對象：企業、學生、工作室。</p>
         <h3 class="w3-text-teal">優點</h3>
