--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
       <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="2">外包服務</h1>
-          <p>服務：神經模型訓練、架構設計，種類包括任何視覺、語音與強化學習模型</p>
-          <p>價格：底價三千</p>
+          <p>服務：神經模型訓練、架構設計，任何視覺、語音與強化學習模型</p>
+          <p>價格：底價兩千</p>
           <p>對象：企業、學生、工作室。</p>
+          <p>填寫表單，快速了解您的需求：https://forms.gle/7TCpPdEixg1phuL99</p>
         <h3 class="w3-text-teal">優點</h3>
           <ol>
             <li>省下找資料時間</li>
             <li>省下條參的時間</li>
             <li>省下設備不足的困擾</li>
+            <li>資料與程式碼保密</li>
         </ol>
 
         </div>
@@ -74,8 +76,8 @@
       <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="1">介紹</h1>
-          <p>甲狀腺工作室是由幾個剛畢業不久，科技公司工程師組成的團隊。</p>
-          <p>有多年的類神經網路設計經驗，包括語言、視覺與強化學習、機器學習。</p>
+          <p>甲狀腺工作室是由幾位國內外科技公司的工程師組成。</p>
+          <p>有多年的類神經網路設計經驗，種類包括任何視覺、語音與強化學習模型、機器學習。</p>
         
         </div>
       </div>
