--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <ol>
               <li>模型訓練：
                 <ol>
-                  <li>根據參數量與資料量：底價，模型參數超過100萬另外計算</li>
+                  <li>根據參數量與資料量：底價2000</li>
                   <li>準確度以及速度：根據場景應用，待估價</li>
               </ol>
               </li>
