--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li>省下找資料時間</li>
             <li>省下條參的時間</li>
             <li>省下設備不足的困擾</li>
-            <li>資料與程式碼保密</li>
+            <li>數據、個資與程式碼保密</li>
         </ol>
 
         </div>
@@ -78,7 +78,7 @@
           <h1 class="w3-text-teal" id="1">介紹</h1>
           <p>甲狀腺工作室是由幾位國內外科技公司的工程師組成。</p>
           <p>有多年的類神經網路設計經驗，種類包括任何視覺、語音與強化學習模型、機器學習。</p>
-        
+          <p>已完成近百名公司、個人、與學生需求，最小可行性測試、論文研究，與課堂作業...</p>
         </div>
       </div>
     
