--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
           <h1 class="w3-text-teal" id="1">介紹</h1>
-          <p>甲狀腺工作室是由幾位國內外科技公司的工程師組成。</p>
+          <p>甲狀腺工作室是由三位國外科技公司的工程師與一位國內PM組成。</p>
           <p>有多年的類神經網路設計經驗，種類包括任何視覺、語音與強化學習模型、機器學習。</p>
           <p>已完成近百名公司、個人、與學生需求，最小可行性測試、論文研究，與課堂作業...</p>
         </div>
